# x11-window-interactor

./: .gitmodules  README.md  main.py  prtscn.c  pyproject.toml  x11_interactor.py
