[project]
name = "x11-window-interactor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mss>=10.0.0",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "python-xlib>=0.33",
]

[tool.setuptools]
py-modules = ["x11_interactor"]
