[project]
name = "x11-window-interactor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mss>=10.0.0",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "python-xlib>=0.33",
    "combo>=0.1.3",
    "matplotlib>=3.10.7",
    "mouse>=0.7.1",
    "pandas>=2.3.3",
    "pyclick>=0.0.2",
    "pynput>=1.8.1",
    "pyod>=2.0.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
]

[tool.setuptools]
py-modules = ["x11_interactor"]
